--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d" d:DesignWidth="1400" d:DesignHeight="900"
         x:Class="HealthOptimizer.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
+		Icon="/Assets/app-icon.ico"
         Title="Health Optimizer"
         Width="1400"
         Height="900"
