--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -93,6 +93,11 @@
 							Content="Body Measurements"
 							Click="ShowMeasurements"/>
 
+					<Button x:Name="CheckUpdatesBtn"
+        Classes="nav-button"
+        Content="Check for Updates"
+        Click="CheckUpdates_Click"/>
+
 				</StackPanel>
 
 			</StackPanel>
