--- a/Views/UpdateWindow.axaml
+++ b/Views/UpdateWindow.axaml
@@ -5,13 +5,15 @@
         mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="400"
         x:Class="HealthOptimizer.Views.UpdateWindow"
         Title="Update Available"
-        Width="500"
-        Height="400"
+        Width="600"
+Height="550"
+MinWidth="600"
+MinHeight="500"
         WindowStartupLocation="CenterOwner"
         CanResize="False"
         Background="#F5F7FA">
 
-	<Border Padding="40">
+	<Border Padding="30">
 		<StackPanel Spacing="24">
 
 			<!-- Icon/Header -->
@@ -46,16 +48,16 @@
 
 			<!-- Release Notes -->
 			<Border Background="White"
-					Padding="20"
-					CornerRadius="12"
-					BoxShadow="0 1 3 0 #15000000"
-					MaxHeight="150">
+        Padding="20"
+        CornerRadius="12"
+        BoxShadow="0 1 3 0 #15000000"
+        MaxHeight="250">
 				<StackPanel Spacing="8">
 					<TextBlock Text="What's New:"
 							   FontSize="14"
 							   FontWeight="SemiBold"
 							   Foreground="#475569"/>
-					<ScrollViewer MaxHeight="100">
+					<ScrollViewer MaxHeight="200">
 						<TextBlock x:Name="ReleaseNotesText"
 								   Text="Release notes will appear here..."
 								   TextWrapping="Wrap"
